Hover Effect added in Buttons

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-.container{
+.container {
     width: fit-content;
     margin: 40px auto;
     position: relative;
@@ -11,12 +11,26 @@
     border-radius: 15px;
 }
 
-.ico-action{
+.ico-action {
     height: 60px;
     position: absolute;
+    top: 45%;
+    cursor: pointer;
+    transition: 0.5s;
 }
 
-.ico-prev{
-    left: -30px;
-    top: 40px;
+.ico-prev {
+    left: 0;
+}
+
+.ico-prev:hover {
+    transform: scale(0.8) translateX(-10px);
+}
+
+.ico-next {
+    right: 0;
+}
+
+.ico-next:hover {
+    transform: scale(0.8) translateX(10px);
 }
